Add get user by id api
