# docs/swagger/index.json
@@ -153,7 +153,7 @@
                   "type": "object",
                   "properties": {
                     "user": {
-                      "$ref": "#/paths/~1user~1search/get/responses/200/content/application~1json/schema/allOf/0"
+                      "$ref": "#/paths/~1user~1%7Bid%7D/get/responses/200/content/application~1json/schema"
                     }
                   }
                 }
@@ -213,7 +213,7 @@
                   "type": "object",
                   "properties": {
                     "user": {
-                      "$ref": "#/paths/~1user~1search/get/responses/200/content/application~1json/schema/allOf/0"
+                      "$ref": "#/paths/~1user~1%7Bid%7D/get/responses/200/content/application~1json/schema"
                     }
                   }
                 }
@@ -280,36 +280,7 @@
                 "schema": {
                   "allOf": [
                     {
-                      "type": "object",
-                      "properties": {
-                        "gender": {
-                          "type": "string"
-                        },
-                        "fullname": {
-                          "type": "string"
-                        },
-                        "uid": {
-                          "type": "string"
-                        },
-                        "avatar": {
-                          "type": "string"
-                        },
-                        "phone": {
-                          "type": "string"
-                        },
-                        "about": {
-                          "type": "string"
-                        },
-                        "email": {
-                          "type": "string"
-                        },
-                        "isEmailVerified": {
-                          "type": "boolean"
-                        },
-                        "isProfileFilled": {
-                          "type": "boolean"
-                        }
-                      }
+                      "$ref": "#/paths/~1user~1%7Bid%7D/get/responses/200/content/application~1json/schema"
                     },
                     {
                       "type": "object",
@@ -332,6 +303,73 @@
           },
           "400": {
             "description": "Search string not found"
+          },
+          "404": {
+            "description": "User not found"
+          }
+        }
+      }
+    },
+    "/user/{id}": {
+      "get": {
+        "tags": [
+          "User"
+        ],
+        "summary": "Get user by id",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "schema": {
+              "type": "string"
+            },
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Get user successful",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "gender": {
+                      "type": "string"
+                    },
+                    "fullname": {
+                      "type": "string"
+                    },
+                    "uid": {
+                      "type": "string"
+                    },
+                    "avatar": {
+                      "type": "string"
+                    },
+                    "phone": {
+                      "type": "string"
+                    },
+                    "about": {
+                      "type": "string"
+                    },
+                    "email": {
+                      "type": "string"
+                    },
+                    "isEmailVerified": {
+                      "type": "boolean"
+                    },
+                    "isProfileFilled": {
+                      "type": "boolean"
+                    }
+                  }
+                }
+              }
+            }
           },
           "404": {
             "description": "User not found"
